--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./src/api:/app
+      - ./src:/app
       - ./output:/app/output
     environment:
       - PYTHONUNBUFFERED=1
@@ -40,7 +40,7 @@ services:
       - weatheria-network
     depends_on:
       - hadoop
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
 
 networks:
   weatheria-network:
