--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -6,11 +6,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY src/api /app
+# Copy application code (ensures correct package structure)
+COPY src/api /app/api
 
 # Expose port
 EXPOSE 8000
 
-# Run FastAPI
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run FastAPI as a package
+CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
