--- a/docker/Dockerfile.hadoop
+++ b/docker/Dockerfile.hadoop
@@ -1,26 +1,23 @@
-FROM sequenceiq/hadoop-docker:2.7.1
+FROM ubuntu:22.04
 
-# Install Python 3 and pip
-RUN yum install -y python3 python3-pip && \
-    yum clean all
+# Install dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        openjdk-8-jdk wget ssh pdsh python3 python3-pip && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
-RUN pip3 install --no-cache-dir \
-    mrjob==0.7.4 \
-    pandas==1.3.5 \
-    numpy==1.21.6
+# Install Hadoop
+ENV HADOOP_VERSION=3.3.6
+ENV HADOOP_HOME=/opt/hadoop
+ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+ENV PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
 
-# Create working directories
-RUN mkdir -p /weatheria/input /weatheria/output /weatheria/scripts
+RUN wget https://dlcdn.apache.org/hadoop/common/hadoop-${HADOOP_VERSION}/hadoop-${HADOOP_VERSION}.tar.gz -O /tmp/hadoop.tar.gz && \
+    tar -xzf /tmp/hadoop.tar.gz -C /opt && \
+    mv /opt/hadoop-${HADOOP_VERSION} /opt/hadoop && \
+    rm /tmp/hadoop.tar.gz
 
-# Set working directory
-WORKDIR /weatheria
+# Python libs
+RUN pip3 install mrjob pandas numpy
 
-# Copy scripts
-COPY src/mapreduce/*.py /weatheria/scripts/
-
-# Expose Hadoop ports
-EXPOSE 50070 8088 19888
-
-# Start Hadoop and keep container running
-CMD ["/etc/bootstrap.sh", "-bash"]
+CMD [ "bash" ]
