--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Error logs
+/error.logs
+./error.logs
+
+
+# emr cluster id
+.emr_cluster_id
+
